<resources>
    <string name="app_name">Quizaton-Alpha</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="lag_egne_sp_rsm_l">Lag egne spørsmål</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="quizaton">Quizaton</string>
    <string name="historie">Historie</string>
    <string name="geografi">Geografi</string>
    <string name="sport">Sport</string>
    <string name="vitenskap">Vitenskap</string>
    <string name="velg_kategori">Velg Kategori</string>
    <string name="film_og_tv">Film og tv</string>
    <string name="teknologi">Teknologi</string>
    <string name="godt_og_blandet_1">Godt og blandet 1</string>
    <string name="godt_og_blandet_2">Godt og blandet 2</string>
    <string name="lett">Lett</string>
    <string name="middels">Middels</string>
    <string name="vanskelig">Vanskelig</string>
    <string name="kategori">Kategori</string>
    <string name="lag_ditt_sp_rsm_l">Lag ditt spørsmål</string>
    <string name="send_inn_sp_rsm_l">Send inn spørsmål</string>
    <string name="skriv_ditt_sp_rsm_l">Skriv ditt spørsmål...</string>
    <string name="velg_kategorien">Velg kategorien</string>
    <string name="blandet2">Godt og Blandet 2</string>
    <string name="blandet1">Godt og Blandet 1</string>
    <string name="filmogtv">Film og TV</string>
    <string name="Velg_Vanskelighetsgrad">Velg Vanskelighetsgrad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="logg_inn">Logg Inn</string>
    <string name="todo">TODO</string>
    <string name="registrer_deg">Registrer deg</string>
    <string name="navn">Navn</string>
    <string name="passord">Passord</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="sp_rsm_l_larget">Spørsmål Larget</string>
    <string name="tilbake_til_hovedmenyen">Tilbake til hovedmenyen</string>
    <string name="registrer_ny_bruker">Registrer Ny Bruker</string>
    <string name="glemtPassord">Glemt Passord?</string>
    <string name="allerede_registrert_logg_inn_her">Allerede registrert? Logg Inn her</string>
    <string name="tlf">Tlf</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logg_ut">Logg ut</string>
    <string name="min_profil">Min Profil</string>
    <string name="hjem">Hjem</string>
    <string name="string_hjem" />
    <string name="avslutt_quiz">Avslutt Quiz</string>
    <string name="svar_2">Svar 2</string>
    <string name="sp_rsm_l">Spørsmål</string>
    <string name="antall_sp_rsm_l">Antall spørsmål</string>
    <string name="svar_1">Svar 1</string>
    <string name="svar_4">Svar 4</string>
    <string name="svar_3">Svar 3</string>
    <string-array name="quiz_kategori">
        <item>All</item>
        <item>Asia</item>
        <item>Afrika</item>
        <item>Amerika</item>
        <item>Europa</item>
        <item>Oseania</item>
    </string-array>

</resources>